--- a/index.html
+++ b/index.html
@@ -77,24 +77,24 @@
                 <div class="columns is-centered">
                     <div class="column has-text-centered">
                         <h1 class="title is-1 publication-title">DynVFX: Augmenting Real Videos <br> with Dynamic Content</h1>
-<!--                         <div class="is-size-5 publication-authors">-->
-<!--                            &lt;!&ndash; Paper authors &ndash;&gt;-->
-<!--                            <span class="author-block">-->
-<!--                            <a href="https://www.linkedin.com/in/danah-yatim-4b15231b5/" target="_blank">Danah Yatim</a><sup>*</sup>,</span>-->
-<!--                            <span class="author-block">-->
-<!--                            <a href="https://www.linkedin.com/in/rafail-fridman/" target="_blank">Rafail Fridman</a><sup>*</sup>,</span>-->
-<!--                              <span class="author-block">-->
-<!--                              <a href="https://omerbt.github.io" target="_blank">Omer Bar-Tal</a>,</span>-->
-<!--                              </span>-->
-<!--                              <span class="author-block">-->
-<!--                                <a href="https://www.weizmann.ac.il/math/dekel/" target="_blank">Tali Dekel</a>-->
-<!--                              </span>-->
-<!--                              </div>-->
+                         <div class="is-size-5 publication-authors">
+                            <!-- Paper authors -->
+                            <span class="author-block">
+                            <a href="https://www.linkedin.com/in/danah-yatim-4b15231b5/" target="_blank">Danah Yatim</a><sup>*</sup>,</span>
+                            <span class="author-block">
+                            <a href="https://www.linkedin.com/in/rafail-fridman/" target="_blank">Rafail Fridman</a><sup>*</sup>,</span>
+                              <span class="author-block">
+                              <a href="https://omerbt.github.io" target="_blank">Omer Bar-Tal</a>,</span>
+                              </span>
+                              <span class="author-block">
+                                <a href="https://www.weizmann.ac.il/math/dekel/" target="_blank">Tali Dekel</a>
+                              </span>
+                              </div>
 
-<!--                              <div class="is-size-5 publication-authors">-->
-<!--                                <span class="author-block">Weizmann Institute of Science</span>-->
-<!--                                <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>-->
-<!--                              </div>-->
+                              <div class="is-size-5 publication-authors">
+                                <span class="author-block">Weizmann Institute of Science</span>
+                                <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                              </div>
                               <div class="column has-text-centered">
 
                                 <div class="publication-links">
